--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -27,18 +27,24 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
+      uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
 
-    - name: Set up JDK 17
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
+        check-latest: true
+
+    - name: Verify Java & Maven
+      run: |
+        java -version
+        mvn -v
 
     - name: Build with Maven
       run: mvn clean compile --batch-mode
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
+      uses: github/codeql-action/analyze@v3
