--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,18 @@
 
     <groupId>com.c4g7</groupId>
     <artifactId>schemflow</artifactId>
-    <version>0.1.0</version>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <name>SchemFlow</name>
     <description>WorldEdit + Skript schematic flow using MinIO/S3</description>
 
     <properties>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
+    <revision>0.5</revision>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <paper.version>1.21.1-R0.1-SNAPSHOT</paper.version>
+        <paper.version>1.21.1-R0.1-SNAPSHOT</paper.version>
         <skript.version>2.7.3</skript.version>
         <minio.version>8.5.8</minio.version>
     </properties>
@@ -104,7 +105,7 @@
     </dependencies>
 
     <build>
-        <finalName>SchemFlow-0.5-all</finalName>
+        <finalName>SchemFlow-${project.version}-all</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -164,6 +165,16 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>false</filtering>
+                <excludes>
+                    <exclude>plugin.yml</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>plugin.yml</include>
+                </includes>
             </resource>
         </resources>
     </build>
