--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ website: https://bio.c4g7.com
 softdepend:
   - Skript
   - WorldEdit
+  - FastAsyncWorldEdit
 commands:
   'SchemFlow':
     description: SchemFlow primary command
