license: switch SchemFlow to Apache-2.0; add NOTICE; bundle LICENSE/NOTICE in META-INF; docs: update license references

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,15 @@
                     <include>plugin.yml</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>${project.basedir}</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>LICENSE</include>
+                    <include>NOTICE</include>
+                </includes>
+                <targetPath>META-INF</targetPath>
+            </resource>
         </resources>
     </build>
 
