feat(groups): add S3 group hierarchy (SF_ prefix), -group flag, groups listing and creation; configurable root/default group

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,6 +8,11 @@ extension: "schm"
 # Where to place downloaded .schm files on disk
 downloadDir: "plugins/Skript/schematics"
 
+# Storage hierarchy (S3 object keys)
+storage:
+  rootDir: "FlowSuite/SchemFlow"   # Root folder prefix in the bucket
+  defaultGroup: "default"         # Default group if none provided
+
 # Startup behavior
 autoListOnStart: true
 # Optional: name of schematic to fetch on start (leave blank to skip)
