docs: Modrinth description + README updates; feat: switch defaults to FlowStack paths; config: default downloadDir to plugins/FlowStack/schematics; storage rootDir now FlowStack/SchemFlow; examples + wiki updated; code fallbacks adjusted

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ test_server/
 # Config files (may contain sensitive data)
 config-local.yml
 secrets.yml
+
+# Local release tooling (keep out of VCS)
+scripts/release.ps1
