chore: ignore modrinth-desc.md and untrack it

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ secrets.yml
 
 # Local release tooling (keep out of VCS)
 scripts/release.ps1
+
+# Modrinth description (local only)
+modrinth-desc.md
