--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,7 +11,7 @@ softdepend:
 commands:
   'SchemFlow':
     description: SchemFlow primary command
-    usage: "/SchemFlow <help|list|fetch|pos1|pos2|upload|paste|delete|cache|reload|provision|groups|group>"
+    usage: "/SchemFlow <help|list|fetch [group:]name|pos1|pos2|upload id [-flags] [-group name]|paste [group:]name [-flags]|delete [group:]name|cache|reload|provision world|groups|group create name>"
     aliases: [schem]
 permissions:
   schemflow.admin:
