--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,9 +9,9 @@ softdepend:
   - WorldEdit
   - FastAsyncWorldEdit
 commands:
-  'SchemFlow':
+  SchemFlow:
     description: SchemFlow primary command
-  usage: "/SchemFlow <help|list|fetch [group:]name|pos1|pos2|upload id [-flags] [-group name]|paste [group:]name [-flags]|delete [group:]name|restore name [-group dest]|trash [clear --confirm]|undo|redo|cache|reload|provision world|groups|group create name|group delete name [--confirm]|group rename old new>"
+    usage: "/SchemFlow <help|list|fetch [group:]name|pos1|pos2|upload id [-flags] [-group name]|paste [group:]name [-flags]|delete [group:]name|restore name [-group dest]|trash [clear --confirm]|undo|redo|cache|reload|provision world|groups|group create name|group delete name [--confirm]|group rename old new>"
     aliases: [schem]
 permissions:
   schemflow.admin:
