Update documentation for v0.5.12 release
- Added comprehensive v0.5.12 changelog entry
- Updated .gitignore to exclude Modrinth changelog files
- Documented all new features: local schematics, update command, performance improvements

--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,6 @@ secrets.yml
 # Local release tooling (keep out of VCS)
 scripts/release.ps1
 
-# Modrinth description (local only)
+# Modrinth description and changelogs (local only)
 modrinth-desc.md
+MODRINTH_CHANGELOG_*.md
